z-index issue

--- a/common/web/css/common.less
+++ b/common/web/css/common.less
@@ -312,7 +312,7 @@ ul.panel-nav {
 	width: 100%;
 	text-align: center;
 	background: @maingray;
-	z-index: 9999;
+	z-index: 1001;
 	overflow: hidden;
 
 	li {
